--- a/setup.cfg
+++ b/setup.cfg
@@ -1,14 +1,14 @@
 [metadata]
-name = edc-form-validation-runner
+name = edc-form-runners
 version = attr: _version
 author = Erik van Widenfelt
 author_email = ew2789@gmail.com
-url = https://github.com/clinicedc/edc-form-validation-runner
+url = https://github.com/clinicedc/edc-form-runners
 license = GPL license, see LICENSE
-description = Classes to re-run form validation for clinicedc/edc projects
+description = Classes to manually run form validation for clinicedc/edc projects
 long_description = file: README.rst
 long_description_content_type = text/x-rst
-keywords = django Edc, modelform, valication, clinicedc, clinical trials
+keywords = django Edc, modelform, validation, clinicedc, clinical trials
 classifiers=
     Environment :: Web Environment
     Framework :: Django
