--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
+_version.py
+.etc/*
+.env
+django_crypto_fields
+.pydevproject
+.project
+.settings/
+db.sqlite3
+.DS_Store
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
