--- a/setup.cfg
+++ b/setup.cfg
@@ -24,6 +24,8 @@ python_requires = >=3.12
 zip_safe = False
 include_package_data = True
 packages = find:
+install_requires =
+    beautifulsoup4
 
 [options.packages.find]
 exclude =
